add store data function
add function what is store registration data to dataset

--- a/Form1.resx
+++ b/Form1.resx
@@ -135,4 +135,7 @@
   <metadata name="moneyDataSetBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>258, 17</value>
   </metadata>
+  <metadata name="categoryDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>7, 55</value>
+  </metadata>
 </root>
